# Nakula

db-schema-visualizer/: .gitignore  LICENSE  README.md  erd  pyproject.toml  requirements.txt  setup.cfg
db-schema-visualizer/db_schema_visualizer/: __init__.py  cli.py  config.py
db-schema-visualizer/db_schema_visualizer/extractor/: __init__.py  base.py  sqlalchemy_extractor.py
db-schema-visualizer/db_schema_visualizer/graph/: __init__.py  builder.py  layout.py
db-schema-visualizer/db_schema_visualizer/model/: __init__.py  schema.py
db-schema-visualizer/db_schema_visualizer/renderer/: __init__.py  base.py  graphviz_renderer.py  html_renderer.py
db-schema-visualizer/db_schema_visualizer/renderer/templates/: interactive.html
db-schema-visualizer/db_schema_visualizer/utils/: __init__.py  filters.py
db-schema-visualizer/docs/: product.md  structure.md  tech_stack.md
db-schema-visualizer/examples/: create_sample_db.py  run_demo.py
db-schema-visualizer/tests/: conftest.py  test_builder.py  test_cli.py  test_extractor.py  test_graphviz_renderer.py
