[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "db-schema-visualizer"
version = "0.1.0"
description = "Generate Entity-Relationship Diagrams from relational database metadata"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "DB Schema Visualizer Contributors" }]
keywords = ["database", "erd", "schema", "visualization", "sqlalchemy", "graphviz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "sqlalchemy>=1.4",
    "graphviz>=0.20",
    "jinja2>=3.0",
    "click>=8.0",
    "networkx>=2.5",
]

[project.optional-dependencies]
postgres   = ["psycopg2-binary>=2.9"]
mysql      = ["pymysql>=1.0"]
mssql      = ["pyodbc>=4.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "pre-commit>=3.0",
]

[project.scripts]
dbviz = "db_schema_visualizer.cli:main"

[project.urls]
Homepage = "https://github.com/example/db-schema-visualizer"
Issues   = "https://github.com/example/db-schema-visualizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_schema_visualizer*"]

[tool.setuptools.package-data]
"db_schema_visualizer.renderer" = ["templates/*.html", "static/*"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

# ---------------------------------------------------------------------------
# isort
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["db_schema_visualizer"]
omit   = ["*/tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under   = 70
