[metadata]
name = db-schema-visualizer
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    sqlalchemy>=1.4
    graphviz>=0.20
    jinja2>=3.0
    click>=8.0
    networkx>=2.5

[options.entry_points]
console_scripts =
    dbviz = db_schema_visualizer.cli:main

[options.package_data]
db_schema_visualizer.renderer =
    templates/*.html
    static/*

[options.extras_require]
postgres =
    psycopg2-binary>=2.9
mysql =
    pymysql>=1.0
mssql =
    pyodbc>=4.0
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    isort>=5.12
    pre-commit>=3.0
